--- a/css/style.css
+++ b/css/style.css
@@ -191,10 +191,7 @@ body {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 12px 24px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -297,7 +294,7 @@ body {
   height: 100%;
   overflow: hidden;
   padding: 40px 32px 164px;
-  transform: translate(0, 100%);
+  transform: translate(0, 101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--secondary-background-color);
   background-color: var(--logo-button-color);
