--- a/css/mobile.css
+++ b/css/mobile.css
@@ -245,16 +245,10 @@ body {
     color: var(--logo-button-color);
 }
 
-.mobile-menu-contacts-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
-
     .mobile-menu-tel {
         font-family: 'Roboto';
         font-weight: 600;
-        font-size: 36px;
+        font-size: 35px;
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
@@ -294,7 +288,21 @@ body {
         width: 24px;
         height: 24px;
     }
+
+    .wrapper-mobile-contacts {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between; 
+        gap: 48px;
+    }
+    .mobile-menu-contacts-list {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+
 }
+
 
 /* +++++++HEADER-TABLET+++++++ */
 
@@ -1348,4 +1356,4 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
- */
+
